--- a/build.gradle
+++ b/build.gradle
@@ -31,8 +31,33 @@ repositories {
 dependencies {
 //    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
 //    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
-    implementation('org.springframework.boot:spring-boot-starter-web')
-    testImplementation('org.springframework.boot:spring-boot-starter-test')
+//    implementation('org.springframework.boot:spring-boot-starter-web')
+//    implementation('org.projectlombok:lombok')
+//    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+//    testImplementation('org.springframework.boot:spring-boot-starter-test')
+
+    compile('org.springframework.boot:spring-boot-starter-web')
+    compile('org.projectlombok:lombok')
+    compile('org.springframework.boot:spring-boot-starter-data-jpa')
+    /** spring-boot-starter-data-jpa
+     * 스프링 부트용 Spring Data Jpa 추상화 라이브러리
+     * 스프링 부트 버전에 맞춰 자동으로 JPA관련 라이브러리들의 버전을 관리
+     */
+    compile('org.springframework.boot:spring-boot-starter-mustache')
+    /** spring-boot-starter-mustache
+     * 머스테치 의존성 추가
+     * 스프링 부트에서 공식 지원하는 템플릿 엔진
+     * 머스테치 파일 기본 위치 : src/main/resource/templates
+     *      이 위치에 머스테치 파일을 두면 스프링 부트에서 자동으로 로딩
+     */
+    compile('com.h2database:h2')
+    /** h2
+     * 인메모리 관계형 데이터베이스
+     * 별도의 설치가 필요 없이 프로젝트 의존성만으로 관리 가능
+     * 메모리에서 실행되기 때문에 애플리케이션을 재시작할 때마다 초기화된다는 점을 이용하여 테스트 용도 많이 사용
+     */
+
+    testCompile('org.springframework.boot:spring-boot-starter-test')
 }
 
 //test {
