--- a/build.gradle
+++ b/build.gradle
@@ -50,6 +50,11 @@ dependencies {
      * 머스테치 파일 기본 위치 : src/main/resource/templates
      *      이 위치에 머스테치 파일을 두면 스프링 부트에서 자동으로 로딩
      */
+    compile('org.springframework.boot:spring-boot-starter-oauth2-client')
+    /** spring-boot-starter-oauth2-client
+     * 소셜 로그인 등 클라이언트 입장에서 소셜 기능 구현 시 필요한 의존성
+     * spring-boot-starter-oauth2-client와 spring-security-oauth2-jose를 기본으로 관리해 줌
+     */
     compile('com.h2database:h2')
     /** h2
      * 인메모리 관계형 데이터베이스
